# mihomo-speedtest-rs

./: .gitignore  CHANGELOG.md  CLI_DOCUMENTATION.md  Cargo.toml  README.md  USAGE_EXAMPLES.md  example-config.yaml
.github/workflows/: ci.yml  publish.yml
docs/: API_DOCUMENTATION.md  CHANGELOG.md  CLI_DOCUMENTATION.md  MIHOMO_USAGE.md  USAGE_EXAMPLES.md
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs  parameters.rs  progress.rs
src/config/: loader.rs  mod.rs
src/core/: mihomo_runner.rs  mod.rs  real_speedtest.rs  speedtest.rs  statistics.rs
src/network/: bandwidth.rs  client.rs  latency.rs  mod.rs  utils.rs
src/output/: export.rs  formatter.rs  mod.rs
